[Avi] Changed bg size to 100% auto to fix the artwork shift

--- a/web/app/user/sass/components/_detailsLayout.scss
+++ b/web/app/user/sass/components/_detailsLayout.scss
@@ -1,6 +1,7 @@
 .details {
     background: transparent url(/user/img/songs/song_detail_bg_tiledY.jpg) left top;
     background-repeat: no-repeat repeat;
+    background-size: 100% auto;
     .main-content {
         margin-top: 60px;
         min-height: 500px;
